# play-with-kafka

./: README.md  docker-compose.yml  init.js  mongo_client.py  pyproject.toml
cluster-linking/: dc1.yml  dc2.yml  docker-compose.yml
flask-app/: Dockerfile  app.py  mongo_client.py  requirements.txt
flask-app/static/: script.js  styles.css
flask-app/templates/: index.html  index1.html  t.html
schema-registry/: admin_apis.py  consume.py  create_acls.py  create_topics.py  describe_acls.py  describe_consumer_group.py  ingest.py  producer.py  telemetry.avsc
scripts/: docker-compose-kerberos.yml  kafka_consume_script.py  kafka_ingest_script.py
