[tool.poetry]
name = "kafka-confluent"
version = "0.1.0"
description = ""
authors = ["hardik <hardikaj96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
confluent-kafka = "^2.3.0"
pandas = "^2.1.3"
flask = "^3.0.0"
flask-socketio = "^5.3.6"
eventlet = "^0.33.3"
pymongo = "^4.6.0"
urllib3 = "^2.1.0"
requests = "^2.31.0"
avro = "^1.11.3"
fastavro = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
